<resources>
    <string name="app_name">Orsim Brawijaya 2019</string>
    <string name="chooseCabangOlahraga">Pilih cabang olahraga favorit</string>
    <string name="chooseFakultas">Pilih Fakultas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="shareString">Bagikan</string>
    <string name="continueReadingString">Baca selengkapnya</string>
    <string name="loginnim">NIM</string>
    <string name="loginpassword">Password</string>
    <string name="login">Log In</string>
    <string name="loginGuest">
        <u>Login As Guest</u>
    </string>
    <string name="caborAtletik">Atletik</string>
    <string name="caborBadminton">Bulutangkis</string>
    <string name="caborBasket">Basket</string>
    <string name="caborBridge">Bridge</string>
    <string name="caborCatur">Catur</string>
    <string name="caborDebatIndonesia">Debat Bahasa Indonesia</string>
    <string name="caborDebatInggris">Debat Bahasa Inggris</string>
    <string name="caborDesainPoster">Desain Poster</string>
    <string name="caborFestivalBand">Festival Band</string>
    <string name="caborFotografi">Fotografi</string>
    <string name="caborFutsal">Futsal</string>
    <string name="caborKarate">Karate</string>
    <string name="caborKempo">Kempo</string>
    <string name="caborKomik">Komik</string>
    <string name="caborMenembak">Menembak</string>
    <string name="caborMenyanyiDangdut">Menyanyi Dangdut</string>
    <string name="caborMenyanyiKeroncong">Keroncong</string>
    <string name="caborMenyanyiPop">Menyanyi Pop</string>
    <string name="caborMenyanyiSeriosa">Seriosa</string>
    <string name="caborNewscasting">News Casting</string>
    <string name="caborPaduanSuara">Paduan Suara</string>
    <string name="caborPanahan">Panahan</string>
    <string name="caborPencakSilat">Pencak Silat</string>
    <string name="caborPidato">Pidato</string>
    <string name="caborPuisi">Puisi</string>
    <string name="caborRecycle">Recycle</string>
    <string name="caborRenang">Renang</string>
    <string name="caborSinematografi">Sinematografi</string>
    <string name="caborMonologStandUpComedy">Stand Up Comedy</string>
    <string name="caborMonolog">Monolog</string>
    <string name="caborTaekwondo">Taekwondo</string>
    <string name="caborTennisLapangan">Tenis Lapangan</string>
    <string name="caborTennisMeja">Tenis Meja</string>
    <string name="caborVocalGrup">Vocal Group</string>
    <string name="caborVoli">Voli</string>
    <string name="caborWallClimb">Wall Climb</string>
    <string name="caborMobileLegend">Mobile Legend</string>
    <string name="caborPUBG">PUBG</string>
    <string name="fakultasFH">Fakultas Hukum</string>
    <string name="fakultasFEB">Fakultas Ekonomi dan Bisnis</string>
    <string name="fakultasFIA">Fakultas Ilmu Administrasi</string>
    <string name="fakultasFP">Fakultas Pertanian</string>
    <string name="fakultasFapet">Fakultas Peternakan</string>
    <string name="fakultasFT">Fakultas Teknik</string>
    <string name="fakultasFK">Fakultas Kedokteran</string>
    <string name="fakultasFPIK">Fakultas Perikanan dan Ilmu Kelautan</string>
    <string name="fakultasFMIPA">Fakultas Matematika dan Ilmu Pengetahuan Alam</string>
    <string name="fakultasFTP">Fakultas Teknologi Pertanian</string>
    <string name="fakultasFISIP">Fakultas Ilmu Sosial dan Ilmu Politik</string>
    <string name="fakultasFIB">Fakultas Ilmu Budaya</string>
    <string name="fakultasFKH">Fakultas Kedokteran Hewan</string>
    <string name="fakultasFKG">Fakultas Kedokteran Gigi</string>
    <string name="fakultasFILKOM">Fakultas Ilmu Komputer</string>
    <string name="fakultasVokasi">Program Vokasi</string>
    <string name="UBKampus3">UB Kampus 3</string>
    <string name="fakultasTester">Fakultas Tester</string>
    <string name="venueLapBulutangkis">Lapangan Bulutangkis</string>
    <string name="venueLapTenis">Lapangan Tenis</string>
    <string name="venueLapTenisMeja">Lapangan Tenis Meja</string>
    <string name="venueGorPertamina">GOR Pertamina</string>
    <string name="venuePasarBurung">Pasar Burung</string>
    <string name="venueWidyaloka">Gedung Widyaloka</string>
    <string name="venueUBTV">UB TV Gedung Rektorat</string>
    <string name="venueGazeboUB">Gazebo Universitas Brawijaya</string>
    <string name="venueGazeboPerpus">Gazebo Perpustakaan UB</string>
    <string name="venueGajayana">Gajayana</string>
    <string name="venueUBSC">Gedung UB Sport Center</string>
    <string name="venueSMA7">Lapangan SMAN 7 Malang</string>
    <string name="venueVoli">Lapangan Voli</string>
    <string name="positiveButton">OK</string>
    <string name="negativeButton">Cancel</string>
    <string name="selectCabor">Setidaknya pilih satu cabang olahraga!</string>
    <string name="selectFakultas">Pilih satu fakultas!</string>
    <string name="confirm">Apakah Anda yakin ingin menghapus pilihan Anda?</string>
    <string name="confirmInfo">Anda bisa merubah pilihan anda pada menu Setting.</string>
    <string name="deleteConfirm">Apakah anda yakin ingin menghapus pilihan favorit?</string>
    <string name="berandaTitle">Beranda</string>
    <string name="navDrawerLogIn">Log In</string>
    <string name="navDrawerBeranda">Beranda</string>
    <string name="navDrawerJadwal">Jadwal</string>
    <string name="navDrawerKlasemen">Klasemen</string>
    <string name="navDrawerFakSaya">Fakultas Saya</string>
    <string name="navDrawerFakLain">Fakultas Lain</string>
    <string name="navDrawerHasil">Hasil Pertandingan</string>
    <string name="navDrawerNews">Berita</string>
    <string name="navDrawerGuide">Petunjuk Penonton</string>
    <string name="navDrawerFavorit">Favorit</string>
    <string name="navDrawerProfil">Profile</string>
    <string name="navDrawerAbout">About</string>
    <string name="ketentuan">Ketentuan</string>
    <string name="viewPagerToday">Hari ini</string>
    <string name="viewPagerYesterday">Kemarin</string>
    <string name="viewPagerTomorrow">Besok</string>
    <string name="viewPagerResult">Hasil</string>
    <string name="viewPagerUpcoming">Akan Datang</string>
    <string name="cardVersus">VS</string>
    <string name="setting_pushNotification">Notifikasi</string>
    <string name="setting_profile">Profil</string>
    <string name="setting_fakultasSaya">Fakultas Saya</string>
    <string name="setting_favoritSaya">Favorit Saya</string>
    <string name="setting_tambahFavorit">Tambah favorit</string>
    <string name="klasmen_Fakultas">Fakultas</string>
    <string name="aboutUs_content">
                    Pengembangan seni dan olahraga merupakan bagian dari upaya peningkatan kualitas sumber daya manusia.
        Seni, olahraga maupun penalaran dapat menjadi media peningkatan jasmani, mental, rohani, pembentuk watak dan kepribadian, serta
        sebagai media pembentuk sportivitas tinggi guna meningkatkan prestasi yang dapat membangkitkan rasa kebanggan setiap individu.
        Olahraga dan Seni Mahasiswa (ORSIM) Brawijaya merupakan sebuah kegiatan yang didalamnya mencakup ketiga bidang tersebut di Universitas
        Brawijaya yang diadakan dengan tujuan mengumpulkan seluruh unit civitas akademika yang bertujuan meningkatkan, mengasah minat, bakat,
        dan kreativitas mahasiswa serta untuk memperluas wawasan dan mengembangkan potensi bagi mahasiswa di bidang olahraga, seni , dan penalaran.
        ORSIM Brawijaya juga merupakan sarana untuk menjaring bibit-bibit unggul dari setiap fakultas untuk regenerasi UKM.
    </string>
    <string name="aboutUs_baron">Maskot merupakan representatif dari karakter dari acara yang dibuat oleh suatu
        organisasi, klub, atau lembaga. Seperti halnya Orsim Brawijaya 2019, yang diwujudkan dalam bentuk hewan
        tangguh yang siap mengiringi kejayaan di acara ini yakni serigala. Harapan untuk sosok tangguh ini dalam
        pelaksanaan Orsim Brawijaya 2019 adalah panutan yang pemberani dan penuh keceriaan lagi pembawa keharmonisan
        diberi nama OBI.
    </string>
    <string name="tidakAdaData">Tidak ada data.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_berita_detail2">Berita Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="syaratPenonton1">A. Pertandingan indoor meliputi Venue
        (Gedung Widyaloka, GKM, UBTV, UBSC, GOR PERTAMINA, Perpustakaan UB , Kolam renang Gajayana)
    </string>
    <string name="syaratPenonton2">B. Pertandingan Outdoor meliputi Venue (Lapangan Voli Samping GOR Pertamina),
        Lapangan UB Dieng, Teras Perpustakaan UB, Gazebo Raden Wijaya, Stadion Gajayana)
    </string>
    <string name="syaratPenonton3">C. Semua Penonton diwajibkan menunjukkan kartu identitas\n
        Untuk mahasiswa UB menunjukan KTM atau SIAM .Mahasiswa baru dapat menunjukan KTMS.
        Untuk Umum (non-Mahasiswa UB) dapat menunjukan KTP atau SIM
    </string>
    <string name="syaratPenonton4">D. Panitia wajib melakukan pemeriksaan badan dan bawaan terhadap
        semua penonton dari benda yang bisa memberikan ancaman terhadap orang lain yang berada
        disekitarnya untuk disita atau diamankan oleh petugas keamanan selama pertandingan berlangsung
    </string>
    <string name="syaratPenonton5">E. Panitia berhak melakukan pemisahan penonton pada setiap pertandingan</string>
    <string name="syaratPenonton6">F. Didalam venue terdapat area steril Dimana area steril adalah area
        yang tidak boleh dilewati atau ditempati baik penonton maupun atlet kecuali panitia dan yang berkepentingan.
    </string>
    <string name="syaratPenonton7">G. Pengembalian perlengkapan atau alat yang dititipkan bisa diambil
        dari pos penjagaan dengan menunjukkan dan memberitahu nomor yang telah diberikan panitia saat
        menitipkan barang, apabila nomor hilang maka partisipan harus menyerahkan fotocopy KTM/KTP/SIM. Waktu
        pengambilan barang maksimal 1X24 jam. Jika barang yang disita tidak diambil hingga melewati batas yang
        ditentukan maka kehilangan dan kerusakan bukan tanggung jawab panitia.
    </string>
    <string name="syaratPenonton8">H. Semua penonton yang keluar dan masuk arena harus melalui pintu masuk dan keluar
        yang ditetapkan oleh pihak panitia.
    </string>
    <string name="syaratPenonton9">I. Semua penonton yang keluar area venue, saat masuk kembali harus melakukan
        pemeriksaan ulang.
    </string>
    <string name="syaratPenonton10">J. Semua penonton yang tidak mendapatkan tempat di area Supporter fakultas terkait
        tidak diperbolehkan menempati area Supporter fakultas lain ataupun area Supporter netral.
    </string>
    <string name="syaratPenonton11">K. Bila terjadi kerusakan fasilitas olahraga ataupun lomba lainnya yang disebabkan
        oleh partisipan maka akan diserahkan ke penanggung jawab setiap venue untuk ditindak lanjuti.
    </string>
    <string name="syaratPenonton12">L. Untuk semua Venue terdapat area Supporter yang telah ditentukan oleh panitia.
        Jika penonton yang bukan berasal dari kedua fakultas tidak ingin menempati area Supporter netral yang
        telah disediakan maka secara terpaksa tidak diperkenankan untuk menonton pertandingan atau dikeluarkan dari
        venue
    </string>
    <string name="peraturanTambahan1">A. Berlaku untuk pertandingan Indoor dan Outdoor</string>
    <string name="to_be_determined">to be determined</string>
    <string name="score">-</string>
</resources>