<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@drawable/background_gradient_color">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LoginActivity">

            <ImageView
                    android:id="@+id/top_image_login"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:padding="15dp"
                    android:src="@drawable/tulisanorsim"/>

            <RelativeLayout
                    android:id="@+id/login_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/top_image_login"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/cv_logo_login"
                            android:layout_height="150dp"
                            android:layout_width="150dp"
                            android:layout_centerHorizontal="true"
                            android:foregroundGravity="top"
                            android:padding="10dp"
                            android:src="@drawable/logo"/>

                    <LinearLayout
                            android:id="@+id/login_box_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="90dp"
                            android:background="@drawable/edittext_background"
                            android:orientation="vertical"
                            android:padding="18dp">

                        <EditText
                            android:id="@+id/nim_et_login"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/edittext_background"
                            android:hint="@string/loginnim"
                            android:fontFamily="@font/gothamlight"
                            android:textColorHint="@android:color/black"
                            android:inputType="number"
                            android:paddingTop="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="14dp"/>

                        <EditText
                                android:id="@+id/password_et_login"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:layout_marginBottom="30dp"
                                android:layout_marginTop="24dp"
                                android:background="@drawable/edittext_background"
                                android:hint="@string/loginpassword"
                                android:fontFamily="@font/gothamlight"
                                android:textColorHint="@android:color/black"
                                android:inputType="textPassword"
                                android:paddingTop="16dp"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:paddingBottom="14dp"/>

                        <Button
                            android:id="@+id/loginBtn_login"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_below="@+id/password_et_login"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/button_background"
                            android:textColor="@android:color/white"
                            android:text="@string/login"
                            android:fontFamily="@font/gothammedium"
                            android:layout_weight="1"
                            android:textAllCaps="false"
                            android:textSize="15sp"/>

                    </LinearLayout>

            </RelativeLayout>

            <TextView
                    android:id="@+id/loginGuest_login"
                    android:layout_marginTop="38dp"
                    android:layout_marginBottom="38dp"
                    android:layout_below="@+id/login_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/gothammedium"
                    android:textColor="@android:color/white"
                    android:text="@string/loginGuest"/>
        </RelativeLayout>

</ScrollView>
